added inter-process communication between order service and inventory service